--- a/Practico 4/index.html
+++ b/Practico 4/index.html
@@ -8,16 +8,18 @@
   <body>
     <!--Header con menu-->
     <header>
-      <div class="image">
+      <span class="image">
         <img src="img/logo.png" alt="logo">
-      </div>
+      </span>
 
       <nav>
+        <div id="sections">
           <ul class="sections" type="none">
-            <li>Smartphones  </li>
-            <li>Tablets  </li>
-            <li>Computadoras  </li>
+            <li>Smartphones</li>
+            <li>Tablets</li>
+            <li>Computadoras</li>
           </ul>
+        </div>
 
         <div class="menu-login">
           <ul class="login" type="none">
@@ -31,13 +33,71 @@
     <!--Contenido principal-->
     <main>
       <div class="article">
-        <img src="img/img-phone-01.jpg" height="300" alt="Mano con telefono">
-        <h2 class="prod-title">Nombre del producto</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <button type="button" name="ver-mas">VER MAS</button>
+        <!--Articulo 1-->
+        <div class="image-article">
+          <img src="img/img-phone-01.jpg" height="200" alt="Mano con telefono">
+        </div>
+        <div class="main-body">
+          <h2 class="prod-title">Nombre del producto</h2>
+          <p class="article-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="#" class="ver-mas">Ver mas</a>
+        </div>
+        <div class="clearfix"></div>
       </div>
+
+      <div class="article">
+        <!--Articulo 2-->
+        <div class="image-article">
+          <img src="img/img-phone-01.jpg" height="200" alt="Mano con telefono">
+        </div>
+        <div class="main-body">
+          <h2 class="prod-title">Nombre del producto</h2>
+          <p class="article-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <div class="button-article">
+            <a href="#" class="ver-mas">Ver mas</a>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="article">
+        <!--Articulo 3-->
+        <div class="image-article">
+          <img src="img/img-phone-01.jpg" height="200" alt="Mano con telefono" class="img-article">
+        </div>
+        <div class="main-body">
+          <h2 class="prod-title">Nombre del producto</h2>
+          <p class="article-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <div class="button-article">
+            <a href="#" class="ver-mas">Ver mas</a>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="article">
+        <!--Articulo 4-->
+        <div class="image-article">
+          <img src="img/img-phone-01.jpg" height="200" alt="Mano con telefono">
+        </div>
+        <div class="main-body">
+          <h2 class="prod-title">Nombre del producto</h2>
+          <p class="article-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <div class="button-article">
+            <a href="#" class="ver-mas">Ver mas</a>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
     </main>
 
     <!--ASIDE para sidebar de elementos relacionados-->
