--- a/Practico 10/git_y_github.html
+++ b/Practico 10/git_y_github.html
@@ -17,6 +17,7 @@
       4. Crear carpeta
       5. git init
       6. git remote add origin URL_DE_GITHUB
+      7. git pull origin master (trae los archivos)
     </p>
     
     <p>
